public/css/main.css
main {
	position: relative;
	overflow-x: hidden;
}

header *[class*="-container"] {
	padding: 2em 0;
}

.nav-container {
	text-align: center;
}

#nav-button {
	margin-bottom: 2em;
	padding: 0;
	background: none;
	border: none;
	font-weight: bold;
}

nav {
	display: none;
	font-weight: bold;
}

@media (min-width: 768px) {
	header {
		padding: 2em 0;
	}

	header .container {
		display: table;
	}

	header *[class*="-container"] {
		display: table-cell;
		vertical-align: middle;
		float: none;
		padding: 0;
	}

	nav {
		display: block;
		text-align: right;
	}
}

.msg {
	position: absolute;
	display: table;
	top: 0; left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(255, 255, 255, .75);
	color: black;
	font-size: 2em;
	font-weight: bold;
	text-align: center;
	z-index: 100;
}

.msg .text {
	display: table-cell;
	vertical-align: middle;
}

.tab-content {
	padding-top: 2em;
	padding-bottom: 2em;
}

.nav.nav-pills {
	display: table;
	margin: 0 auto;
	font-weight: bold;
}

.nav.nav-pills > .active > a,
.nav.nav-pills > .active > a:focus,
.nav.nav-pills > .active > a:hover {
	background-color: black;
	color: white;
	opacity: 1;
}

form {
	max-width: 600px;
	margin: 0 auto;
}

form label {
	display: block;
}

input {
	border: none;
}

input, textarea {
	width: 100%;
	margin-bottom: 2em;
}

input[type="text"], input[type="number"], input[type="url"] {
	border-bottom: 1px solid black;
}

input[type="text"], input[type="number"], input[type="url"], textarea {
	padding: 10px;
}

input[type="checkbox"] {
	width: auto;
}

input[type="submit"] {
	display: table;
	width: auto;
	padding: 10px 30px;
	margin-left: auto;
	margin-right: auto;
	font-weight: bold;
}

input[type="file"] {
	font-weight: bold;
}

label span {
	font-weight: normal;
}

.content-container {
	background-color: white;
	color: black;
}

.content-container > .content {
	min-height: 100px;
}

.video-container {
	padding: 0;
}

.video-container > .video {
	border-radius: 0;
}

.merch-highlights-section {
	padding-top: 3em;
	padding-bottom: 3em;
}

.merch-highlights {
	padding: 10px;
	background-color: transparent;
}

.merch-highlights .merch {
	border-radius: 7px;
	background-color: white;
}

.logo-container {
	text-align: center;
}

@media (min-width: 768px) {
	.logo-container {
		text-align: left;
	}
}

#cs-logo {
	height: 5em;
	border-radius: 50%;
	border: 2px solid;
	padding: 10px;
	text-align: center;
}

#cs-logo.fixed {
	position: fixed;
	height: 300px;
	left: 50%;
	-webkit-transform: translateX(-50%);
	transform: translateX(-50%);
	border: 0;
	padding: 0;
	animation: fade-in .3s 1 backwards;
}

@-webkit-keyframes fade-in { from { opacity: 0 } to { opacity: 1; } }
@keyframes fade-in { from { opacity: 0 } to { opacity: 1; } }

footer {
	padding: 2em 0;
	text-align: center;
	font-size: 1.5em;
}

article.content-container {
	background-color: transparent;
	padding: 10px 10px 20px;
}

article .article-content {
	position: relative;
	border-radius: 7px;
	background-color: white;
	overflow: hidden;
}

article .article-content > * {
	padding: 30px;
}

article:not(.full) .article-content .text {
	max-height: 600px;
}

article:not(.full) .article-content img + .text,
article:not(.full) .article-content .img + .text {
	max-height: 250px;
}

article .article-content img,
article .article-content .img {
	padding: 0;
	height: 350px;
}

article:not(.full) .article-content img,
article:not(.full) .article-content .img {
	display: block;
	background-size: cover;
	background-color: rgba(0, 0, 0, .2);
}

.overflow-fade-sheet {
	position: absolute;
	display: table;
	width: 100%;
	height: 30px;
	bottom: 0;
	left: 0;
	box-shadow: 0 0 10px 20px white;
	padding: 0!important;
	text-align: center;
	font-weight: bold;
}

article.full {
	padding: 30px 0;
	background-color: white;
}

article.full .article-content {
	background-color: transparent;
	max-width: 900px;
	margin: 0 auto;
}

article.full .img-reel {
	white-space: nowrap;
	overflow: hidden;
	padding-left: 0;
	padding-right: 0;
}

article.full .img-reel-nav {
	padding: 0;
	text-align: center;
}

article.full .img-reel-nav a {
	font-size: 1.5em;
	padding: 0 30px;
}

@media (max-width: 767px) {
	article.full .article-content img {
		object-fit: contain;
		width: 100%;
	}
}

.artist-bio {
	overflow: hidden;
}

.artist-bio:not(:last-child) {
	margin-bottom: 50px;
}

.artist-bio .text {
	padding: 30px;
}

.artist-bio .text .socials {
	font-size: 1.5em;
}

.artist-bio .text .socials img {
	height: 1.5em;
}

.artist-bio .img-wrapper {
	padding: 0;
}

.artist-bio .img {
	height: 400px;
	background-color: rgba(180, 180, 180);
	background-size: cover;
	background-position: center;
	padding: 0;
	margin: 0 -15px;
}

@media (min-width: 768px) {
	.artist-bio {
		background-color: transparent;
	}

	.artist-bio:nth-child(odd) {
		background-image: linear-gradient(to left, white 55%, black 55%, black 100%);
	}

	.artist-bio:nth-child(even) {
		background-image: linear-gradient(to right, white 55%, black 55%, black 100%);
	}

	.artist-bio .img {
		margin: 0;
	}

	.artist-bio .img-wrapper::before,
	.artist-bio .img-wrapper::after {
		position: absolute;
		content: " ";
		top: 0;
		width: 120px;
		height: 100%;
		background-color: white;
		-webkit-transform: skew(-7deg);
		transform: skew(-7deg);
	}

	.artist-bio .img-wrapper::before {
		left: -95px;
	}

	.artist-bio .img-wrapper::after {
		right: -95px;
	}

	.artist-bio:nth-child(odd) .img-wrapper::before {
		background-color: black;
	}

	.artist-bio:nth-child(even) .img-wrapper::after {
		background-color: black;
	}

	.artist-bio .text {
		max-height: 400px;
		overflow: auto;
	}

	.artist-bio:nth-child(odd) .text {
		padding-right: 0;
	}

	.artist-bio:nth-child(even) .text {
		padding-left: 0;
	}

	.artist-bio .text {
		max-height: 400px;
		overflow: auto;
	}
}

.project-thumb {
	padding: 10px;
	background-color: transparent;
}

.project-thumb .content {
	border-radius: 7px;
	background-color: white;
}

.project-thumb .content > * {
	padding: 10px;
}

.project-thumb .img {
	height: 300px;
	background-color: rgba(0,0,0,.5);
	background-size: cover;
	background-position: center;
}

.project-thumb .text {
	padding-left: 20px;
	padding-right: 20px;
	font-weight: bold;
}

.project-thumb .title {
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow-x: hidden;
}

.project-thumb .title:hover {
	white-space: normal;
	word-wrap: break-word;
}

.project-thumb .socials-icon {
	position: relative;
	top: 3px;
	font-size: 1.5em;
	font-weight: normal;
}

#map {
	height: 400px;
}

